# Minerva-py

./: .gitignore  pyproject.toml
desktop/: package.json
minerva/: __init__.py  __main__.py
minerva/agent/: __init__.py  code_agent.py  search_agent.py
minerva/cli/: __init__.py  app.py  formatter.py
minerva/core/: ReAct.py  __init__.py  agent.py  path.py  plan_exe.py  state.py
minerva/example/: agent.py  augmentation.py  llm.py  main.py  parallization.py  prompt_chain.py
minerva/graph/: memory.py  nodes.py  state.py  workflow.py
minerva/graph/node/: __init__.py  _common.py  const.py  context_compressor.py  context_monitor.py  final.py  planner.py  route.py  verifier.py
minerva/prompts/: __init__.py  code_agent_prompt.py  search_agent_prompt.py  stage1.py  stage2.py  stage3.py  stage4.py
minerva/providers/: __init__.py  ollama.py  openai.py
minerva/tools/: __init__.py  bash_tool.py  file_tools.py  grep_tool.py  notepad_tool.py  todo_tool.py
minerva/tools/web_search_tool/: __init__.py  ddgs_search_tool.py  tavily_search_tool.py
minerva/vecstore/: milvus.py
tests/: test_tools.py
