[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minerva"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
  "dotenv>=0.9.9",
  "langchain==1.3.11",
  "langchain-core>=1.4.8",
  "langchain-ollama==1.1.0",
  "langchain-openai>=1.3.3",
  "langgraph==1.2.7",
  "pydantic==2.13.4",
  "typer>=0.26.8",
]
