[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minerva"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
  "ddgs>=9.14.4",
  "dotenv>=0.9.9",
  "langchain==1.3.11",
  "langchain-chroma>=1.1.0",
  "langchain-core>=1.4.8",
  "langchain-milvus>=0.3.3",
  "langchain-ollama==1.1.0",
  "langchain-openai>=1.3.3",
  "langgraph==1.2.8",
  "milvus-lite>=3.0",
  "pydantic==2.13.4",
  "pymilvus>=2.6.16",
  "rich>=15.0.0",
  "trafilatura>=2.1.0",
  "typer>=0.26.8",
]
